# patat-protocol

./: .gitignore  COPYING  Cargo.toml  Dockerfile  README.md  meson.build  qemu_v8_local.xml  results.org  uuid.txt
host/: Cargo.toml  Makefile
host/src/: main.rs  patat_participant.rs  server.rs  verifier.rs
patat-protocol-rs/: Cargo.toml
patat-protocol-rs/src/: client.rs  combined_evidence.rs  evidence.rs  lib.rs  patat_connection.rs  patat_participant.rs  server.rs
proto/src/: lib.rs
src/: client.rs  combined_evidence.rs  evidence.rs  evidence_tree.rs  handshake.rs  keys.rs  lib.rs  main.rs  merkle_tree.rs  meson.build  patat_connection.rs  patat_participant.rs  server.rs  verifier.rs
src/client/: handshake.rs
src/server/: handshake.rs
ta/: Cargo.toml  Xargo.toml
ta/src/: evidence.rs  hasher.rs  lib.rs  main.rs  noise.rs  patat_participant.rs  random.rs  x25519.rs
