[package]
name = "patat-protocol-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
snow = { version = "0.6.0", features=["default-resolver"] }
byteorder = "=1.4.0"
sha2 = "=0.7.0"
block-buffer = "=0.2.0"
anyhow = "1.0"
rs_merkle = "1.4"
proc-macro2 = "=1.0.32"
syn = "=1.0.64"
quote = "=1.0.0"
libc = "0.2.48"
proto = { path = "../proto" }
optee-teec = { path = "../../../optee-teec" }

[profile.release]
lto = true
